--- a/DatasetAnalysis.ipynb
+++ b/DatasetAnalysis.ipynb
@@ -50,11 +50,11 @@
         "drive.mount(\"/content/MyDrive\")"
       ],
       "metadata": {
-        "id": "EcopSGdNKgSo",
-        "outputId": "95b0a0ba-9b8a-4e20-8784-f9eba1a2fcd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EcopSGdNKgSo",
+        "outputId": "95b0a0ba-9b8a-4e20-8784-f9eba1a2fcd1"
       },
       "execution_count": 1,
       "outputs": [
@@ -66,6 +66,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The labels for this dataset are stored in YOLO format. i.e.\n",
+        "\n",
+        "    class_id bbox_x_center bbox_y_center bbox_width bbox_height"
+      ],
+      "metadata": {
+        "id": "4GmdTvHOLWCS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Our pest animals classes:"
+      ],
+      "metadata": {
+        "id": "H-uKtcl2LiYD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_labels = {\n",
+        "    0: \"bear\",\n",
+        "    1: \"raccoon\",\n",
+        "    2: \"rat\",\n",
+        "    3: \"skunk\"\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "dqGwCTe9LoIV"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
