--- a/DatasetAnalysis.ipynb
+++ b/DatasetAnalysis.ipynb
@@ -102,6 +102,87 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Import the required libraries:"
+      ],
+      "metadata": {
+        "id": "s5pmk-k3L7EN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import matplotlib.pyplot as plt\n",
+        "import random as random\n",
+        "import os"
+      ],
+      "metadata": {
+        "id": "BReXY07pL8I8"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Defining paths to the collected datasets, both found and the ones we prepared ourselves:"
+      ],
+      "metadata": {
+        "id": "cyOlfbRIMwTS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset_paths = {\n",
+        "  \"found_bear\": \"/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Found/Bear/Bear.v1i.yolov8\",\n",
+        "  \"found_raccoon\": \"/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Found/Raccoon/Raccoon.v38-416x416-resize.yolov8\",\n",
+        "  \"found_rat\": \"/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Found/Rat\",\n",
+        "  \"found_skunk\": \"/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Found/Skunk\",\n",
+        "  \"ours_combined\": \"/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Ours\"\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "G2OH8Mc_MsNB"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set the path to the dataset\n",
+        "dataset_path = dataset_paths[\"ours_combined\"]\n",
+        "\n",
+        "# Get the list of all images paths in the dataset\n",
+        "image_paths = [os.path.join(dataset_path, \"images\", image_name) for image_name in os.listdir(os.path.join(dataset_path, \"images\"))]\n",
+        "\n",
+        "# Get the list of all labels paths in the dataset\n",
+        "label_paths = [os.path.join(dataset_path, \"labels\", label_name) for label_name in os.listdir(os.path.join(dataset_path, \"labels\"))]\n",
+        "\n",
+        "print (image_paths)"
+      ],
+      "metadata": {
+        "id": "MJY5CW1ZL_nw",
+        "outputId": "7a78df98-31f1-4602-fddd-d0d496b9f4f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Ours/images/Rat', '/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Ours/images/Skunk', '/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Ours/images/Raccoon', '/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Ours/images/Bear']\n"
+          ]
+        }
+      ]
     }
   ]
 }
