--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -203,9 +203,28 @@
     {
       "cell_type": "code",
       "source": [
+        "# Function to easy count the contents of a dataset by class across 'train', 'val', and 'test' parts\n",
+        "def count_samples(dataset):\n",
+        "  sample_counts = {}\n",
+        "\n",
+        "  for k, v in dataset.items():\n",
+        "    sample_counts[k] = [len(v['images']['train']), len(v['images']['val']), len(v['images']['test'])]\n",
+        "\n",
+        "  return sample_counts"
+      ],
+      "metadata": {
+        "id": "H0R4-tEAF7sc"
+      },
+      "execution_count": 154,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Doing our best with the totality of data we've got to make sure our classes are balanced\n",
         "\n",
         "dataset_ids = dataset_paths.keys()\n",
+        "\n",
         "merged_dataset = {}\n",
         "\n",
         "for c in class_labels.values():\n",
@@ -243,8 +262,17 @@
         "        pass\n",
         "\n",
         "\n",
-        "for k, v in merged_dataset.items():\n",
-        "  print(k, len(v['images']['train']), len(v['images']['val']), len(v['images']['test']))\n",
+        "\n",
+        "\n",
+        "print(count_samples(merged_dataset))\n",
+        "\n",
+        "train_samples_count = [v[0] for k, v in count_samples(merged_dataset).items()]\n",
+        "min_train_samples_count = np.array(train_samples_count).min()\n",
+        "\n",
+        "for k, v in count_samples(merged_dataset).items():\n",
+        "  print(k, v[0])\n",
+        "\n",
+        "print(min_train_samples_count)\n",
         "\n",
         "\n",
         "#file_counts = [len(datasets[id][0]['train']) for id in dataset_ids]\n",
@@ -253,26 +281,24 @@
         "#merged_dataset"
       ],
       "metadata": {
-        "id": "kPJAuCzo7Idi",
-        "outputId": "d26196a8-ad8d-46a4-ef84-723db8143c6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kPJAuCzo7Idi",
+        "outputId": "7112224c-de04-40a2-a134-96a01f58ebf3"
       },
-      "execution_count": 150,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "bear 1500 92 94\n",
-            "raccoon 170 29 17\n",
-            "rat 162 41 20\n",
-            "skunk 220 0 0\n",
-            "bear 1500 92 94\n",
-            "raccoon 170 29 17\n",
-            "rat 162 41 20\n",
-            "skunk 220 0 0\n"
+            "{'bear': [1500, 92, 94], 'raccoon': [170, 29, 17], 'rat': [162, 41, 20], 'skunk': [220, 0, 0]}\n",
+            "bear 1500\n",
+            "raccoon 170\n",
+            "rat 162\n",
+            "skunk 220\n",
+            "162\n"
           ]
         }
       ]
