--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -157,10 +157,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Collect all image and label files we've got and save into one data structure:"
+      ],
+      "metadata": {
+        "id": "V-ardTmZHkcm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Collect all image and label files we've got and save into one data structure\n",
-        "\n",
         "def enumerate_dataset(dataset_id, dataset_path):\n",
         "  image_paths, label_paths = {}, {}\n",
         "\n",
@@ -217,6 +224,15 @@
       },
       "execution_count": 154,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Merging all the data we have into N strict classes (defined earlier). Doing our best with the totality of data we've got to make sure the classes are balanced."
+      ],
+      "metadata": {
+        "id": "lBpRnSb9Hobs"
+      }
     },
     {
       "cell_type": "code",
