--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -172,16 +172,17 @@
         "  image_paths, label_paths = {}, {}\n",
         "\n",
         "  try:\n",
-        "    image_paths['train'] = [os.path.join(dataset_path, \"train\", \"images\", image_filename) for image_filename in os.listdir(os.path.join(dataset_path, \"train\", \"images\"))]\n",
-        "    image_paths['val'] = [os.path.join(dataset_path, \"valid\", \"images\", image_filename) for image_filename in os.listdir(os.path.join(dataset_path, \"valid\", \"images\"))]\n",
-        "    image_paths['test'] = [os.path.join(dataset_path, \"test\", \"images\", image_filename) for image_filename in os.listdir(os.path.join(dataset_path, \"test\", \"images\"))]\n",
+        "    # sorting the directories listings so that images' and labels' positions in lists match\n",
+        "    image_paths['train'] = [os.path.join(dataset_path, \"train\", \"images\", image_filename) for image_filename in sorted(os.listdir(os.path.join(dataset_path, \"train\", \"images\")))]\n",
+        "    image_paths['val'] = [os.path.join(dataset_path, \"valid\", \"images\", image_filename) for image_filename in sorted(os.listdir(os.path.join(dataset_path, \"valid\", \"images\")))]\n",
+        "    image_paths['test'] = [os.path.join(dataset_path, \"test\", \"images\", image_filename) for image_filename in sorted(os.listdir(os.path.join(dataset_path, \"test\", \"images\")))]\n",
         "  except FileNotFoundError:\n",
         "    pass\n",
         "\n",
         "  try:\n",
-        "    label_paths['train'] = [os.path.join(dataset_path, \"train\", \"labels\", image_filename) for image_filename in os.listdir(os.path.join(dataset_path, \"train\", \"labels\"))]\n",
-        "    label_paths['val'] = [os.path.join(dataset_path, \"valid\", \"labels\", image_filename) for image_filename in os.listdir(os.path.join(dataset_path, \"valid\", \"labels\"))]\n",
-        "    label_paths['test'] = [os.path.join(dataset_path, \"test\", \"labels\", image_filename) for image_filename in os.listdir(os.path.join(dataset_path, \"test\", \"labels\"))]\n",
+        "    label_paths['train'] = [os.path.join(dataset_path, \"train\", \"labels\", image_filename) for image_filename in sorted(os.listdir(os.path.join(dataset_path, \"train\", \"labels\")))]\n",
+        "    label_paths['val'] = [os.path.join(dataset_path, \"valid\", \"labels\", image_filename) for image_filename in sorted(os.listdir(os.path.join(dataset_path, \"valid\", \"labels\")))]\n",
+        "    label_paths['test'] = [os.path.join(dataset_path, \"test\", \"labels\", image_filename) for image_filename in sorted(os.listdir(os.path.join(dataset_path, \"test\", \"labels\")))]\n",
         "  except FileNotFoundError:\n",
         "    pass\n",
         "\n",
@@ -193,7 +194,7 @@
       "metadata": {
         "id": "MJY5CW1ZL_nw"
       },
-      "execution_count": 91,
+      "execution_count": 214,
       "outputs": []
     },
     {
@@ -204,7 +205,7 @@
       "metadata": {
         "id": "yJaxxSXlUjTS"
       },
-      "execution_count": 92,
+      "execution_count": 215,
       "outputs": []
     },
     {
@@ -234,7 +235,7 @@
       "metadata": {
         "id": "H0R4-tEAF7sc"
       },
-      "execution_count": 178,
+      "execution_count": 222,
       "outputs": []
     },
     {
@@ -249,8 +250,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Doing our best with the totality of data we've got to make sure our classes are balanced\n",
-        "\n",
         "dataset_ids = dataset_paths.keys()\n",
         "\n",
         "merged_dataset = {}\n",
@@ -287,51 +286,81 @@
         "\n",
         "balanced_dataset = {}\n",
         "\n",
-        "for k, v in merged_dataset.items():\n",
-        "  if k not in balanced_dataset:\n",
-        "    initialize_class_in_dataset(k, balanced_dataset)\n",
+        "for cl, v in merged_dataset.items():\n",
+        "  if cl not in balanced_dataset:\n",
+        "    initialize_class_in_dataset(cl, balanced_dataset)\n",
         "\n",
-        "  print(len(v['images']['train']))\n",
-        "  balanced_dataset[k]['images']['train'] = v['images']['train'][:min_train_samples_count]\n",
-        "  merged_dataset[k]['images']['train'] = v['images']['train'][min_train_samples_count:]\n",
-        "  print(len(v['images']['train']))\n",
+        "  # Fill the training set, capping at min_train_samples_count\n",
+        "  balanced_dataset[cl]['images']['train'] = v['images']['train'][:min_train_samples_count]\n",
+        "  balanced_dataset[cl]['labels']['train'] = v['labels']['train'][:min_train_samples_count]\n",
+        "\n",
+        "  # Take out the samples from the original merged dataset\n",
+        "  merged_dataset[cl]['images']['train'] = v['images']['train'][min_train_samples_count:]\n",
+        "  merged_dataset[cl]['labels']['train'] = v['labels']['train'][min_train_samples_count:]\n",
         "\n",
         "\n",
+        "sample_pool = {}\n",
         "\n",
+        "# try to reach 80/10/10 ratios for our train-val-test split\n",
+        "val_test_target_sample_count = round(min_train_samples_count * 0.125)\n",
         "\n",
+        "#print(val_test_target_sample_count)\n",
         "\n",
+        "for cl, data in merged_dataset.items():\n",
+        "  # dumping all leftover samples into one list per class\n",
+        "  sample_pool = {}\n",
+        "  sample_pool['images'] = []\n",
+        "  sample_pool['labels'] = []\n",
         "\n",
-        "print(count_samples(balanced_dataset))\n",
-        "print(count_samples(merged_dataset))\n",
+        "  sample_pool['images'] += [i for i in data['images']['train']]\n",
+        "  sample_pool['images'] += [i for i in data['images']['val']]\n",
+        "  sample_pool['images'] += [i for i in data['images']['test']]\n",
+        "  sample_pool['labels'] += [l for l in data['labels']['train']]\n",
+        "  sample_pool['labels'] += [l for l in data['labels']['val']]\n",
+        "  sample_pool['labels'] += [l for l in data['labels']['test']]\n",
         "\n",
-        "#file_counts = [len(datasets[id][0]['train']) for id in dataset_ids]\n",
+        "  n = val_test_target_sample_count\n",
         "\n",
-        "#np.array(file_counts)\n",
-        "#merged_dataset"
+        "  # finally, populating our validation and testing set\n",
+        "  balanced_dataset[cl]['images']['val'] = sample_pool['images'][:n]\n",
+        "  balanced_dataset[cl]['labels']['val'] = sample_pool['labels'][:n]\n",
+        "  balanced_dataset[cl]['images']['test'] = sample_pool['images'][n:n+n]\n",
+        "  balanced_dataset[cl]['labels']['test'] = sample_pool['labels'][n:n+n]"
       ],
       "metadata": {
+        "id": "kPJAuCzo7Idi"
+      },
+      "execution_count": 272,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Checking the train-val-test distribution of samples in our final, merged and balanced dataset:"
+      ],
+      "metadata": {
+        "id": "QyI5mrrBgKgb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(count_samples(balanced_dataset))"
+      ],
+      "metadata": {
+        "id": "tUWVuD6JgZKM",
+        "outputId": "506eac5a-3396-439f-db61-4167a3d10088",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "kPJAuCzo7Idi",
-        "outputId": "54e67171-d556-44dd-e770-d75132840c6c"
+        }
       },
-      "execution_count": 190,
+      "execution_count": 271,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1500\n",
-            "1338\n",
-            "170\n",
-            "8\n",
-            "162\n",
-            "0\n",
-            "220\n",
-            "58\n",
-            "{'bear': [162, 0, 0], 'raccoon': [162, 0, 0], 'rat': [162, 0, 0], 'skunk': [162, 0, 0]}\n",
-            "{'bear': [1338, 92, 94], 'raccoon': [8, 29, 17], 'rat': [0, 41, 20], 'skunk': [58, 0, 0]}\n"
+            "{'bear': [162, 20, 20], 'raccoon': [162, 20, 20], 'rat': [162, 20, 20], 'skunk': [162, 20, 20]}\n"
           ]
         }
       ]
