--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -348,11 +348,11 @@
         "print(count_samples(balanced_dataset))"
       ],
       "metadata": {
-        "id": "tUWVuD6JgZKM",
-        "outputId": "506eac5a-3396-439f-db61-4167a3d10088",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tUWVuD6JgZKM",
+        "outputId": "506eac5a-3396-439f-db61-4167a3d10088"
       },
       "execution_count": 271,
       "outputs": [
@@ -364,6 +364,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Awesome! Now, just let's make sure the dataset does not require any further cleaning, meaning there are no images with missing labels, or orphan labels that do not belong to any image:"
+      ],
+      "metadata": {
+        "id": "nnmkXwbSg1bT"
+      }
     }
   ]
 }
