--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "kPJAuCzo7Idi"
       },
-      "execution_count": 272,
+      "execution_count": 365,
       "outputs": []
     },
     {
@@ -352,9 +352,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tUWVuD6JgZKM",
-        "outputId": "506eac5a-3396-439f-db61-4167a3d10088"
+        "outputId": "eee8f811-16dd-408a-99af-9edf1814a7b8"
       },
-      "execution_count": 271,
+      "execution_count": 366,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,6 +372,60 @@
       ],
       "metadata": {
         "id": "nnmkXwbSg1bT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dataset_cleanness_check(dataset):\n",
+        "  image_files = set()\n",
+        "  label_files = set()\n",
+        "\n",
+        "  for cl, data in dataset.items():\n",
+        "    for subset_type in ['train', 'val', 'test']:\n",
+        "      image_files.update({i.split(\"/\")[-1].split(\".\")[0] for i in data['images'][subset_type]})\n",
+        "      label_files.update({l.split(\"/\")[-1].split(\".\")[0] for l in data['labels'][subset_type]})\n",
+        "\n",
+        "  print(f\"Extra images (without corresponding labels): {image_files - label_files}\")\n",
+        "  print(f\"Extra labels (without corresponding images): {label_files - image_files}\")"
+      ],
+      "metadata": {
+        "id": "OMK4Hm26hNcO"
+      },
+      "execution_count": 369,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset_cleanness_check(balanced_dataset)"
+      ],
+      "metadata": {
+        "id": "rpXCmI_0hfHS",
+        "outputId": "e9b2c355-37be-43e4-b01e-852bdad6a658",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 370,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extra images (without corresponding labels): set()\n",
+            "Extra labels (without corresponding images): set()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are none extra images or labels! Great. Now we are ready to save the merged dataset on disk and proceed to training."
+      ],
+      "metadata": {
+        "id": "se-PmSsilSpO"
       }
     }
   ]
