--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -401,13 +401,13 @@
         "dataset_cleanness_check(balanced_dataset)"
       ],
       "metadata": {
-        "id": "rpXCmI_0hfHS",
-        "outputId": "e9b2c355-37be-43e4-b01e-852bdad6a658",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rpXCmI_0hfHS",
+        "outputId": "4070d47f-74ea-4ec7-e51e-f6040a67964b"
       },
-      "execution_count": 370,
+      "execution_count": 371,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,11 +422,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "There are none extra images or labels! Great. Now we are ready to save the merged dataset on disk and proceed to training."
+        "There are none extra images or labels! Great. Now we are ready to save the merged dataset on disk (till this point we have been just manipulating file references) and proceed to training."
       ],
       "metadata": {
         "id": "se-PmSsilSpO"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import os\n",
+        "#run it once for making directories\n",
+        "\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/labels', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/valid', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/valid/images', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/valid/labels', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/test', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/test/images', exist_ok=True)\n",
+        "os.makedirs('/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/test/labels', exist_ok=True)"
+      ],
+      "metadata": {
+        "id": "cq2n4N2vl2Sf"
+      },
+      "execution_count": 377,
+      "outputs": []
     }
   ]
 }
