--- a/DatasetPrep.ipynb
+++ b/DatasetPrep.ipynb
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "MJY5CW1ZL_nw"
       },
-      "execution_count": 454,
+      "execution_count": 469,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "yJaxxSXlUjTS"
       },
-      "execution_count": 455,
+      "execution_count": 470,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "H0R4-tEAF7sc"
       },
-      "execution_count": 456,
+      "execution_count": 471,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "kPJAuCzo7Idi"
       },
-      "execution_count": 461,
+      "execution_count": 472,
       "outputs": []
     },
     {
@@ -352,9 +352,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tUWVuD6JgZKM",
-        "outputId": "afde89b7-8647-493c-d151-bc4430655446"
+        "outputId": "3c1c489f-f99c-4faa-9624-11a64c7b1942"
       },
-      "execution_count": 458,
+      "execution_count": 473,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +392,7 @@
       "metadata": {
         "id": "OMK4Hm26hNcO"
       },
-      "execution_count": 459,
+      "execution_count": 474,
       "outputs": []
     },
     {
@@ -405,9 +405,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rpXCmI_0hfHS",
-        "outputId": "c19de5d1-79ff-41e3-e372-f9e511c82990"
+        "outputId": "56d762de-6370-4df4-c9c5-6bcb60f7dc80"
       },
-      "execution_count": 460,
+      "execution_count": 475,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +450,7 @@
       "metadata": {
         "id": "cq2n4N2vl2Sf"
       },
-      "execution_count": 392,
+      "execution_count": 476,
       "outputs": []
     },
     {
@@ -468,30 +468,92 @@
         "          if file_category == 'images':\n",
         "            if image_file.endswith(\".jpg\"):\n",
         "              image = Image.open(image_file)\n",
-        "              image = image.convert(\"RGB\")\n",
-        "              print(image_file)\n",
+        "              #image = image.convert(\"RGB\")\n",
+        "\n",
         "              new_filename = os.path.splitext(os.path.basename(image_file))[0] + \".jpg\"\n",
         "              print(os.path.join(final_dataset_root, subset_type, \"images\", new_filename))\n",
-        "              return\n",
-        "              #image.save(os.path.join(image_dir,\"train\", new_filename), \"JPEG\")\n",
         "\n",
+        "              #image.save(os.path.join(final_dataset_root, subset_type, \"images\", new_filename))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DHF-EVAxn9gC"
+      },
+      "execution_count": 477,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "save_merged_dataset()"
       ],
       "metadata": {
+        "id": "hPBZ3lOYxNqJ",
+        "outputId": "e82b1c2c-c5fe-41d3-e325-217ceefd353d",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DHF-EVAxn9gC",
-        "outputId": "e7add090-aadf-49a5-def6-4a5403a44fef"
+          "base_uri": "https://localhost:8080/",
+          "height": 954
+        }
       },
-      "execution_count": 411,
+      "execution_count": 478,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Found/Bear/Bear.v1i.yolov8/train/images/000000000502_jpg.rf.83db1248a2f3a631680a3736c91fb03c.jpg\n",
-            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000000502_jpg.rf.83db1248a2f3a631680a3736c91fb03c.jpg\n"
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/170925_abc_social_polite_bears_16x9_992.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/31719703_web1_201126-CAN-wild-safe-bear_1.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/7h2u6tj3h3_brownbear_hero.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/84feb799-0287-4679-abb5-5f176d841770_750x422.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/AUG_170925_abc_social_polite_bears_16x9_992.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/AUG_84feb799-0287-4679-abb5-5f176d841770_750x422.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/AUG_bear-cub-3-2000-8b30852778c64809a47910f3c4d0e1b6.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/AUG_c23968ec-866f-41fa-9ca5-cb624e2dc782-jumbo3x1_bears1.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/AUG_images (1)_weiufhwihf.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/Bear-family-in-Bristol-2.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/bear-cub-3-2000-8b30852778c64809a47910f3c4d0e1b6.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/bears.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/blackbear-7c06301713c14fe699b4f4bcf64ac53b.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/c23968ec-866f-41fa-9ca5-cb624e2dc782-jumbo3x1_bears1.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/download (1)_xvnepfjk.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/download (3)_xvnepfjka.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/download (4)_pwpa.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/hero3_1032346_final.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/hqdefault_werogwpgjo.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/images (1)_okwfkopkpwoe.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000000502_jpg.rf.83db1248a2f3a631680a3736c91fb03c.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000000502_jpg.rf.b2e7fe9a42524b6690e36c77fbf6c8a1.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000001442_jpg.rf.0889b9d4c576db90b43b4a85144d3c81.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000001442_jpg.rf.9264ece1d401414278a73b7ddd9c67c5.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000002619_jpg.rf.1fb22dfd792a99f557e0bbe031c76e81.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000002619_jpg.rf.502099461fc0662f60933d739f5c63fd.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000003398_jpg.rf.1a25052d5cdec9d25f5b3f45b0343ebf.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000003398_jpg.rf.81b9d8ac06fd326ce38980db4e323069.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000003481_jpg.rf.a732aa2d1ed6c074a4cc89dad5aba72f.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000003481_jpg.rf.d11a4fedc928d1e8d3daaae4d6878fe3.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000004338_jpg.rf.aa8416947f6e24be4da0920bc9e5ec88.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000004338_jpg.rf.d73a870254f9457ae77811c91acdf811.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000005184_jpg.rf.071ba52b1719eaed394d8b8f11f5c5a3.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000005184_jpg.rf.a5d12e931c73ecd9a12ad57532b28ab7.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000005745_jpg.rf.92d8db4160b659e41a7742e21048bda3.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000005745_jpg.rf.c8b2b34ec478dfc32501211a763afac5.jpg\n",
+            "/content/MyDrive/MyDrive/IAT481/481 CV Project/Datasets/Final/train/images/000000005785_jpg.rf.7ec59229bb87fe6ca5b61330cd1cef57.jpg\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-478-cd76c8d4daed>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msave_merged_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-477-b807df4ddf24>\u001b[0m in \u001b[0;36msave_merged_dataset\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m               \u001b[0;31m#image = image.convert(\"RGB\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m               \u001b[0mnew_filename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".jpg\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m               \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_dataset_root\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubset_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"images\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.10/posixpath.py\u001b[0m in \u001b[0;36mbasename\u001b[0;34m(p)\u001b[0m\n\u001b[1;32m    138\u001b[0m \u001b[0;31m# Return the tail (basename) part of a path, same as split(path)[1].\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 140\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mbasename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    141\u001b[0m     \u001b[0;34m\"\"\"Returns the final component of a pathname\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
